# rag_platform

./: .gitignore  README.adoc  README.md  docker-compose.yml  pyproject.toml  setup.py
api_ai/: Dockerfile  README.adoc  requirements.txt
api_ai/src/: main.py  settings.py
crawler/: Dockerfile  README.adoc  requirements.txt  run.py  scrapy.cfg
crawler/src/: base.py  item.py  loader.py  main.py  middlewares.py  pipeline.py  settings.py  util.py
crawler/src/spiders/: base_example_spider.py  mercadolibre_faq_spider.py  ww2_wiki_spider.py
rag/: Dockerfile  README.adoc  requirements.txt
rag/config/: faqs_mercadolibre_config.json  wwII_wiki_config.json
rag/src/: app.py  chatbot.py  config.py  config_schema.py  memory_manager.py  prompts.py  rag_system.py  state.py  test_app.py  user_manager.py  utils.py
