[project]
name = "rag-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "scrapy (==2.13.3)",
    "itemloaders (>=1.4.0,<2.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-openai (>=1.1.11,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "langsmith (>=0.7.33,<0.8.0)"
]

[tool.poetry]
packages = [{include = "rag_platform", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
